# appliance-catalog-api

./: .env  Cargo.toml
migrations/2020-10-11-122709_create_users/: up.sql
src/: database.rs  errors.rs  main.rs  routes.rs  schema.rs  utils.rs
src/controllers/: auth_controller.rs  mod.rs
src/middlewares/: auth_middleware.rs
src/models/: mod.rs  user.rs
src/repositories/: user_repository.rs
src/services/: auth_service.rs
