[package]
name = "appliance-catalog-api"
version = "0.1.0"
authors = ["Justin Parado <justin.parado.personal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
diesel = {version = "1.4.4", features = ["postgres", "r2d2"]}
listenfd = "0.3"
